# cf-tunnel-route-editor

./: Cargo.toml  README.md
src/: cf.rs  cli.rs  lib.rs  main.rs
src/cloudflare/: client.rs  dns.rs  errors.rs  mod.rs  tokens.rs  tunnels.rs
src/commands/: apply.rs  dns.rs  ingress.rs  interactive.rs  mod.rs  rollback.rs  tunnel.rs
src/config/: diff.rs  mod.rs  model.rs  mutation.rs  snapshot.rs  validation.rs
tests/: integration_test.rs
tests/fixtures/: realistic-tunnel.json  tunnel-with-unknown-fields.json
