[package]
name = "cftctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cftctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
similar = "2"
json-patch = "3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
url = "2"
dialoguer = "0.11"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
